# archivist

./: .gitignore  Cargo.toml  README.md  README.org  Rakefile  package.json
archivist-backend/: package.json
archivist-backend/src/: index.ts
archivist-frontend/: old-frontend-package.json  package.json
archivist-frontend/src/routes/crack/: +page.svelte
crackathon/: Cargo.toml  README.org  Rakefile  go.mod  main.go
crackathon/src/: archive_formatter.rs  human_readable_formatter.rs  input_parser.rs  main.rs
frontend/: package.json
frontend/.svelte-kit/: ambient.d.ts
frontend/src/routes/: +page.svelte
frontend/src/routes/api/[...slugs]/: +server.ts
server/: package.json
server/.svelte-kit/: ambient.d.ts
server/.svelte-kit/types/: route_meta_data.json
server/.svelte-kit/types/src/routes/: $types.d.ts
server/.svelte-kit/types/src/routes/crack/: $types.d.ts  proxy+page.ts
server/src/lib/: scryfallUtils.ts
server/src/routes/crack/: +page.svelte  +page.ts
server/static/: setcodes.json
src/: archive_formatter.rs  input_parser.rs  main.rs  scryfall.rs  types.rs
src/routes/crack/: +page.svelte  +page.ts
